# manuscript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig
.circleci/: config.yml
.github/actions/: build-macos.yml
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/workflows/: build.yml  test.yml
src/: bof.zig  deps.zig  m.c  mrt.zig  msr.zig  python.zig
src/101/: 101.cpp  101.h
src/pch/: pch.cpp
src/rtj/: CMakeLists.txt  road-to-jsc.cpp  road-to-jsc.h
src/seed/: build.js  jrt.d.ts  package-lock.json  package.json  seed.ts
tests/: index.js  it.zig  main.ts
tests/cjs/: index.js  module.cjs
tests/js/: index.js
tests/mjs/: index.mjs
tests/ts/: index.ts
tools/: Dockerfile.linux  Setup.local  build.tgz.sh  fetch.v8.deps.sh  linux.Setup.local  linux.amd64.Dockerfile  linux.arm64.Dockerfile  linux.install.deps.sh  mac.arm64.args.gn  mac.build-jsc.sh  mac.build.101.sh  mac.build.cpython.sh  mac.build.jsc.sh  mac.build.rtj.sh  mac.build.v8.sh  mac.install-brew-deps.sh  mac.install.brew.deps.sh
