# Set build arguments here. See `gn help buildargs`.
is_component_build = false
v8_monolithic=true
v8_use_external_startup_data = false
# v8_static_library=true
# only on linux
# v8_enable_private_mapping_fork_optimization=true
v8_enable_31bit_smis_on_64bit_arch=true

is_debug = false
# symbol_level = 1
# v8_optimized_debug = true

use_goma = false
v8_enable_fast_mksnapshot = true
v8_enable_snapshot_compression=true
v8_enable_webassembly=false
v8_enable_i18n_support=false

use_custom_libcxx=false
clang_use_chrome_plugins = false
clang_base_path="/usr"
treat_warnings_as_errors=false
use_lld=false
use_gold=false

target_cpu="arm64"
host_cpu="arm64"
target_os="mac"
host_os="mac"
